--- a/BoutiqueEnLigne/config/database.yml
+++ b/BoutiqueEnLigne/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: BoutiqueEnLigne_production
-  username: BoutiqueEnLigne
-  password: <%= ENV['BOUTIQUEENLIGNE_DATABASE_PASSWORD'] %>
+  database: BoutiqueEnLigne_test
